# MCP23S17

./: .gitignore  CMakeLists.txt  ISPI.h  LICENSE  MCP23S17.cpp  MCP23S17.h  README.md
platform/: pico.cpp  pico.h
